--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.0.0",
     "antd-mobile": "^2.3.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "^3.9.1",
+    "chartjs-chart-geo": "^3.10.0",
+    "d3": "^7.8.2",
+    "d3-composite-projections": "^1.4.0",
     "gh-pages": "^2.2.0",
     "react": "^16.13.0",
-    "react-chartjs-2": "^2.9.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^16.13.0",
     "react-json-view": "^1.19.1",
     "react-router-dom": "^5.1.2",
@@ -20,7 +23,7 @@
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
